# coding-theory-test-task

./: .gitignore  CMakeLists.txt  README.md  collect_statistics.cpp  main.cpp
src/: matrix.cpp  order_statistic.cpp  utils.cpp
src/include/: matrix.h  order_statistic.h  utils.h
